# Project_5

Project 5/: AddAutomaton.cpp  AddAutomaton.h  CMakeLists.txt  CommaAutomaton.cpp  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  FactsAutomaton.cpp  FactsAutomaton.h  Graph.cpp  Graph.h  Header.cpp  Header.h  IDAutomaton.cpp  IDAutomaton.h  Left_parenAutomaton.cpp  Left_parenAutomaton.h  Lexer.cpp  Lexer.h  MultiplyAutomaton.cpp  MultiplyAutomaton.h  Parameter.cpp  Parameter.h  PeriodAutomaton.cpp  PeriodAutomaton.h  Predicate.cpp  Predicate.h  Q_markAutomaton.cpp  Q_markAutomaton.h  QueriesAutomaton.cpp  QueriesAutomaton.h  Relation.cpp  Relation.h  Right_parenAutomaton.cpp  Right_parenAutomaton.h  Rule.cpp  (+15 more)
